2002-04-15  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-html.c (yelp_html_do_non_docbook): 
	- show error dialog if open fails.

	* src/yelp-error.h (YELP_ERROR): added error for non-docbook
	  documents.

	* src/yelp-db2html.c (yelp_db2html_convert): use stylesheet from
	  stylesheets/.
	(yelp_db2html_convert): updated to reflect changes in the
	  stylesheet.

	* stylesheets/*: Added, includs patch from sander to
	  gnome-doc-list.
	
	* configure.in (AC_OUTPUT): added stylesheets/Makefile.

	* Makefile.am (SUBDIRS): added stylesheets

2002-04-14  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c: pretty-fied the sub-pages too.

	* src/yelp-window.c (yw_handle_url): pass the error to
	  gnome_url_show.

	* src/yelp-db2html.c (yelp_db2html_convert): better
	  error-handling.

	* src/yelp-html.c:
	(yelp_html_idle_read_end): don't free the handle twice.
	(yelp_html_idle_read_end): reset pointer to normal.
	(yelp_html_open_uri): set cursor to watch.

	* src/yelp-window.c (yw_handle_url): If error is set during
	  set_uri, popup an error-dialog describing the error.

	* src/yelp-html.c: 
	- Added support for GError's
	* src/yelp-view-index.c: same.
	* src/yelp-view-content.c: same.

	* src/yelp-db2html.c: 
	- Include gnome-i18n.h
	- Mark the error messages for translation.
	
	(yelp_db2html_convert): revert a little, in wait for sanders new
	  stylesheets.
	- use GError to signal errors while parsing document. Still needs
	  to be added to above layers. 
	- don't leek the stylesheet name.

	* src/yelp-error.[ch]: added.

	* src/yelp-view-content.c: added includes to fix warnings.

	* src/yelp-view-index.c: same.

	* src/yelp-util.c (yelp_util_extract_docpath_from_uri): 
	- added support for man and info pages too.

	* src/yelp-html.c: 
	- loads of changes :)
	- don't use GnomeVFS Async calls.
	- Read non-docbook data in an idle
	- Shortcut the gnome vfs help module and call internal
	  docbook2html code instead if document is xml/sgml docbook.