@@ -38,7 +38,7 @@ else
 fi
 AC_DEFINE_UNQUOTED(GNOMELOCALEDIR, "$GNOMELOCALEDIR")
 
-PKG_CHECK_MODULES(YELP, libgtkhtml-2.0 >= 1.99.3	\
+PKG_CHECK_MODULES(YELP, libgtkhtml-2.0 >= 1.99.5	\
 			gnome-vfs-2.0 >= 1.1		\
 			libgnome-2.0 >= 1.112.1		\
 			libgnomeui-2.0 >= 1.103.0	\
