@@ -1,5 +1,11 @@
 2002-04-15  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-window.c: fixed a couple of warnings.
+	(yw_handle_url): send the error correctly to gnome_url_show,
+	  thanks rhult :)
+
+	* configure.in: bumped gtkhtml2 requirements.
+
 	* src/yelp-html.c (yelp_html_do_non_docbook): 
 	- show error dialog if open fails.
 
